# PyNitride

./: .gitignore  .readthedocs.yaml  .spyderproject  LICENSE.txt  README.md  config.ini  crestats.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build_tests.yml  build_wheels.yml  ci.yml  docs.yml  pypi.yml  testpypi.yml  tests.yml
dev/: HowToNotes
docs/: Makefile  conf.py  document  document.py  document.sh  index.html  index.rst  index_redirect.html  make.bat  modules.rst  poissolve.materials.rst  poissolve.maths.fermidiracintegral.rst  poissolve.maths.rst  poissolve.mesh.functions.rst  poissolve.solvers.coupled.rst  poissolve.solvers.rst  poissolve.solvers.schrodinger.rst  poissolve.util.rst  pynitride.rst  solve_schrodinger.rst
docs/_static/: carriers.rst  custom.css  data_management.rst  math_and_physics.rst  (+2 more)
examples/: Bulk_Acoustic_Phonons.ipynb  EMC2017Abstract-SecondTime.ipynb  EMC2017Abstract.ipynb  GOMAC_pFET-Copy1.ipynb  GOMAC_pFET.ipynb  GenerateHwurt.ipynb  HyperFET_Games.ipynb  PyNitridePhonon.ipynb  QWHEMT.ipynb  Shukla_Supp.ipynb  Strain.ipynb  StrainForHugo-Copy1.ipynb  StrainForHugo-Copy2.ipynb  StrainInPyNitride.ipynb  Strained_pFET.ipynb  Strained_pFET_with_init.ipynb  UniBi.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2-Copy1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Which_Phonons_Scatter.ipynb  fdcheck.ipynb  kp_to_bulk.ipynb  pnjunction.html  pnjunction.ipynb
parameters/: 1dp.txt  BFV2001.txt  Dreyer2016.txt  Ponce2019.txt  Rinke2008.txt  VM2003.txt  _meta.txt  _system.txt  bader_recommended.txt  chemistry.txt  constants.txt  fake.txt
poissolve/: constants.py  context.py  devices.py  materials.py  mesh.py  mesh_functions.py  util.py  visual.py
pynitride/: __init__.py  carriers.py  cython_loops.pxd  cython_maths.pyx  devices.py  fem.pyx  machine.py  material.py  maths.py  maths.pyx  mesh.py  paramdb.py  phonons.py  reciprocal_mesh.py  sim.py  snider.py  solvers.py  strain.py  thermal.py  visual.py
scratch/: Assembly.ipynb  Bulk_Acoustic_Phonons.ipynb  GOMAC_pFET-Copy1.ipynb  HyperFET_Games_back.ipynb  MeshFunctionPlay-Copy1.ipynb  PyNitridePhonon.ipynb  StrainForHugo.ipynb  Strained_pFET.ipynb  Untitled.ipynb  Which_Phonons_Scatter.ipynb  kp_to_bulk.ipynb  remass.ipynb
sphinx/: Makefile  conf.py  document  document.py  index_redirect.html
tests/: Untitled.ipynb  __init__.py  conftest.py  ctest_cython_loops.pyx  runtests.py  test_fermidirac.py  test_fermidiracintegral.py  test_functions.py  test_maths.py  test_paramdb.py  test_poisson.py  test_schrodinger.py  test_structure.py  test_util.py  test_vs_1dp.py
texnotes/: FEM.tex  wurtzitephonons.tex
(+596 files in other folders)
