[build-system]
requires = ["setuptools>=61", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "PyNitride"
version = "0.1.3"
description = "Python utilities for 1D band diagrams and simulation"
authors = [{name = "Samuel James Bader", email = "samuel.james.bader@gmail.com"}]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "cython",
    "matplotlib",
    "scipy",
    "pint",
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false
