[build-system]
requires = ["setuptools>=61", "Cython>=3.2.4,<4", "numpy>=2.4.3,<3"]
build-backend = "setuptools.build_meta"

[project]
name = "PyNitride"
dynamic = ["version"]
description = "Python utilities for 1D band diagrams and simulation"
authors = [{name = "Samuel James Bader", email = "samuel.james.bader@gmail.com"}]
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.3,<3",
    "cython>=3.2.4,<4",
    "matplotlib>=3.10.8,<4",
    "scipy>=1.17.1,<2",
    "pint>=0.25.2,<1",
    "python-dotenv>=1.2.2,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2,<10",
    "sphinx>=9.1.0,<10",
    "pip-tools>=7.5.3,<8",

    # Not needed, but unless specified explicitly, other dependencies
    # may install this package on Windows but not Linux, which means
    # the requirements.txt file will be different for Windows/Linux
    # which breaks the simple CI
    "colorama>=0.4.6,<1",
    "furo>=2025.12.19,<2026",
]

[tool.setuptools.dynamic]
version = {attr = "pynitride.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.cibuildwheel]
build = "cp314-*"
skip = ["*-win32", "*-manylinux_i686", "*-musllinux_*"]
before-test = 'python -m pip install "pytest>=9.0.2,<10"'
test-command = "pytest {project}/tests/"